--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <section id="kontakty">
                 <div class="contact-info">
                     <h1>KASSER zavlažovanie</h1>
-                    <p>Kavečianska cesta 1119/12<br>040 01 Košice<br>tel: +421 55 6323341</p>
+                    <p>Kavečianska cesta 1119/12<br>040 01 Košice<br>tel: +421 911 131 807</p>
                 </div>
 
                 <div class="store">
@@ -609,4 +609,5 @@
         }
     </script>
 </body>
+
 </html>
