--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
         <nav>
             <ul>
                 <li><a onclick="showSection('uvod')">ÚVOD</a></li>
+				<li><a href="katalog.html">Katalóg produktov</a></li>
                 <li><a onclick="showSection('napiste')">NAPÍŠTE NÁM</a></li>
                 <li><a href="https://eshop.zavlazovanie.sk/" target="_blank">ESHOP</a></li>
                 <li><a onclick="showSection('kontakty')">KONTAKTY</a></li>
@@ -406,7 +407,7 @@
                             <p class="image-subtitle">NA KĽÚČ</p>
                         </div>
                     </a>
-                    <a href="https://eshop.zavlazovanie.sk/" target="_blank" class="image-item">
+                    <a href="katalog.html" class="image-item">
                         <img src="katalog.jpg" alt="Katalóg komponentov pre zavlažovanie" loading="lazy">
                         <div class="image-overlay">
                             <h3 class="image-title">KATALÓG</h3>
@@ -469,7 +470,7 @@
             <section id="kontakty">
                 <div class="contact-info">
                     <h1>KASSER zavlažovanie</h1>
-                    <p>Kavečianska cesta 1119/12<br>040 01 Košice<br>tel: +421 911 131 807</p>
+                    <p>Kavečianska cesta 1119/12<br>040 01 Košice<br>tel: +421 55 6323341</p>
                 </div>
 
                 <div class="store">
@@ -609,7 +610,7 @@
         }
     </script>
 </body>
-
 </html>
+
 
 
